--- a/public/index.html
+++ b/public/index.html
@@ -94,12 +94,14 @@
             </div>
 
             <button
-              class="button is-fullwidth is-link is-outlined mt-5"
+              class="button is-fullwidth is-link is-outlined mt-5 is-rounded"
               id="add-btn"
             >
-              Add
+              <span>Add</span>
+              <span class="icon is-small">
+                <i class="fas fa-plus"></i>
+              </span>
             </button>
-
             <div
               class="field is-grouped is-grouped-multiline mt-6"
               id="currency-tags"
@@ -107,6 +109,14 @@
           </section>
         </div>
         <div class="column is-two-thirds">
+          <div class="buttons has-addons mt-3 is-centered" id="btn-group">
+            <button class="button" id="1d">1 Day</button>
+            <button class="button" id="1w">1 Week</button>
+            <button class="button is-link is-selected" id="1m">1 Month</button>
+            <button class="button" id="1y">1 Year</button>
+            <button class="button" id="5y">5 Years</button>
+            <!-- <button class="button">No</button> -->
+          </div>
           <canvas id="currency-canvas"></canvas>
         </div>
       </div>
