--- a/public/index.html
+++ b/public/index.html
@@ -110,12 +110,13 @@
         </div>
         <div class="column is-two-thirds">
           <div class="buttons has-addons mt-3 is-centered" id="btn-group">
-            <button class="button" id="1d">1 Day</button>
-            <button class="button" id="1w">1 Week</button>
-            <button class="button is-link is-selected" id="1m">1 Month</button>
-            <button class="button" id="1y">1 Year</button>
-            <button class="button" id="5y">5 Years</button>
-            <!-- <button class="button">No</button> -->
+            <button class="button" data="1">1 Day</button>
+            <button class="button" data="7">1 Week</button>
+            <button class="button is-link is-selected" data="1">
+              1 Month
+            </button>
+            <button class="button" data="12">1 Year</button>
+            <button class="button" data="60">5 Years</button>
           </div>
           <canvas id="currency-canvas"></canvas>
         </div>
