Added ability to change the base currency

--- a/public/index.html
+++ b/public/index.html
@@ -110,13 +110,17 @@
         </div>
         <div class="column is-two-thirds">
           <div class="buttons has-addons mt-3 is-centered" id="btn-group">
-            <button class="button" data="1">1 Day</button>
-            <button class="button" data="7">1 Week</button>
+            <button class="button" data="1" data-parameter="week">
+              1 Week
+            </button>
             <button class="button is-link is-selected" data="1">
               1 Month
             </button>
             <button class="button" data="12">1 Year</button>
             <button class="button" data="60">5 Years</button>
+            <button class="button" data="120">
+              10 Years
+            </button>
           </div>
           <canvas id="currency-canvas"></canvas>
         </div>
