--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="column is-two-thirds">
           <div class="buttons has-addons mt-3 is-centered" id="btn-group">
-            <button class="button" data="1" data-parameter="week">
+            <button class="button" data="1" data-week="week">
               1 Week
             </button>
             <button class="button is-link is-selected" data="1">
